--- a/src/app/modules/offboarding/employee-list/employee-list.component.html
+++ b/src/app/modules/offboarding/employee-list/employee-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let employee of employeeList()">
-  <li>{{ employee.name }}</li>
+  <button (click)="goToEmployeeDetails(employee.id)">{{ employee.name }}</button>
 </div>
