base styles and view

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<section>
+  <h1 class="message">Ups..., Page not found</h1>
+  <button mat-raised-button class="btn" (click)="goToHomePage()">
+    <mat-icon>keyboard_arrow_left</mat-icon>
+    Home page
+  </button>
+</section>
