employee list view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<header>PeopleGo</header>
+<header class="header">
+  <h1 class="header-title">PeopleGo</h1>
+</header>
 <main>
   <router-outlet />
 </main>
