--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,7 @@
-$brand-color: #ffbf00;
+$brand-color: #ff9600;
+
+$bg-main-light-color: #e3e1e1;
+
+$bg-item-light-color: #f8f8f8;
 
 $font-dark-color: #1a1a1b;
