--- a/src/app/components/employee-table/employee-table.component.html
+++ b/src/app/components/employee-table/employee-table.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <mat-form-field appearance="outline" class="searchField">
-    <input matInput (keyup)="applyFilter($event)" placeholder="John Doe">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
 
-  <table mat-table [dataSource]="dataSource()">
+  <table *ngIf="dataSource() as dataSource else loading" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="fullname">
       <th mat-header-cell *matHeaderCellDef>Full Name</th>
       <td mat-cell *matCellDef="let employee"> {{employee.name}} </td>
@@ -36,10 +36,21 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="tableBodyRow" (click)="onRecordSelect(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="tableBodyRow" (click)="onRecordSelect(row)">
+    </tr>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter</td>
+      <td class="mat-cell" colspan="5">
+        <div class="noDataRow">
+          <p>No data matching the filter</p>
+        </div>
+      </td>
     </tr>
   </table>
+
+  <ng-template #loading>
+    <div class="spinnerWrapper">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 </div>
