--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -3,5 +3,9 @@ $brand-color: #ff9600;
 $bg-main-light-color: #e3e1e1;
 
 $bg-item-light-color: #f8f8f8;
+$bg-item-dark-color-subdued: #c4c4c4;
 
-$font-dark-color: #1a1a1b;
+$font-dark-color: #1e1e1e;
+$font-dark-color-subdued: #434343;
+
+$border-dark-color-subdued: #7c7b7b;
