--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,13 +15,11 @@ $screen-breakpoints: (
 );
 
 $font-sizes: (
-  small: 0.8rem, //not verified
-  medium: 1rem, //not verified
+  medium: 1rem,
   large: 1.4rem,
 );
 
 $line-height: (
-  small: 0.8rem, //not verified
-  medium: 1rem, //not verified
+  medium: 1.2rem,
   large: 1.7rem,
 );
