--- a/src/app/components/offboard-form/offboard-form.component.html
+++ b/src/app/components/offboard-form/offboard-form.component.html
@@ -1,1 +1,51 @@
-<p>offboard-form works!</p>
+<form [formGroup]="employeeDataForm()" class="employeeDataForm">
+  <mat-form-field appearance="outline">
+    <mat-label>Receiver</mat-label>
+    <input matInput formControlName="receiver">
+    <mat-error *ngIf="getError('receiver') as error">{{error}}</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Email</mat-label>
+    <input matInput formControlName="email">
+    <mat-error *ngIf="getError('email') as error">{{error}}</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Phone</mat-label>
+    <input matInput formControlName="phone">
+    <mat-error *ngIf="getError('phone') as error">{{error}}</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Street line</mat-label>
+    <input matInput formControlName="address">
+    <mat-error *ngIf="getError('address') as error">{{error}}</mat-error>
+  </mat-form-field>
+
+  <div class="multipleFieldRow">
+    <mat-form-field appearance="outline">
+      <mat-label>City</mat-label>
+      <input matInput formControlName="city">
+      <mat-error *ngIf="getError('city') as error">{{error}}</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Postal code</mat-label>
+      <input matInput formControlName="code">
+      <mat-error *ngIf="getError('code') as error">{{error}}</mat-error>
+    </mat-form-field>
+  </div>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Country</mat-label>
+    <input matInput formControlName="country">
+    <mat-error *ngIf="getError('country') as error">{{error}}</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Notes</mat-label>
+    <textarea matInput formControlName="notes"></textarea>
+    <mat-error *ngIf="getError('notes') as error">{{error}}</mat-error>
+  </mat-form-field>
+</form>
